correct routes, docs init checklist
